--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: python
-install: "pip install -r dev-requirements.txt"
+install:
+  - "pip install -r requirements.txt"
+  - "pip install -r dev-requirements.txt"
+
 script: "pylint app"
